dashboard-js/client/app/main/main.css
.thing-form {
    margin: 20px 0;
}

#banner {
    border-bottom: none;
    margin-top: -20px;
}

#banner h1 {
    font-size: 60px;
    line-height: 1;
    letter-spacing: -1px;
}

.hero-unit {
    position: relative;
    padding: 30px 15px;
    color: #F5F5F5;
    text-align: center;
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
    background: #4393B9;
}

.hero-unit-heading {
    font-weight: bold;
}

.login-form-row {
    margin-top: 30px;
}

.btn-login {
  background-color: #aaa;
}

.btn-login:hover {
  background-color: #ccc;
}

.footer {
    text-align: center;
    padding: 30px 0;
    margin-top: 70px;
    border-top: 1px solid #E5E5E5;
}

